# plipro-project-rantevou

./: .coverage  .gitignore  README.md  check_db.sh  config.json  db_benchmark.sh  debug.py  forever.py  interactive_script.py  log  print.html  pyproject.toml  rantevou_db.py  settings.json  settings_old.json  test.db  tmp.xlsx  tox.ini
docs/: perigrafi_project.md  παρουσίαση_εφαρμογής  περιγραφή_διάρθρωσης.md  περιγραφή_υλοποίησης_controller.md  περιγραφή_υλοποίησης_model.md  περιγραφή_υλοποίησης_view.md  στουραιτης-μαθηματα-απο-το-project.md
docs/sample-gui/: contents
html/rantevou/: index.html
html/rantevou/src/: index.html
html/rantevou/src/controller/: alerts_controller.html  appointments_controller.html  customers_controller.html  index.html  logging.html  mailer.html  (+1 more)
html/rantevou/tests/: db_for_tests.html  index.html  test_email.html
rantevou/: __init__.py  __main__.py  rantevou.db  server.py
rantevou/data/: email_body.txt  log.txt  rantevou.db  rantevou.db.bak
rantevou/src/controller/: __init__.py  appointments_controller.py  customers_controller.py  exceptions.py  logging.py  mailer.py  subscriber.py
rantevou/src/model/: appointment copy.py  appointment.py  caching.py  customer.py  entities.py  exceptions.py  faker.py  interfaces.py  session.py  types.py
rantevou/src/view/: __init__.py  abstract_views.py  alerts.py  appointment_managment.py  appointment_search.py  appointment_view.py  appointments.py  appointments_old.py  customer_managment.py  customer_view.py  customers.py  customers_old.py  entries.py  exceptions.py  forms.py  global_vars.py  navigation.py  overview.py  shared.py  sidepanel.py  statistics.py  stats.py  window.py
rantevou/tests/: db_for_tests.py  test_email.py  test_model.py
(+14 files in other folders)
