
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rantevou"
version = "0.9.0"
dependencies = ["sqlalchemy", "flask", "openpyxl", "types-openpyxl", "pydantic", "faker"]
requires-python = ">=3.10"
authors = [
{name = "Ηλίας Στουραΐτης", email = "std168326@ac.eap.gr"},
]
maintainers = []
description = "Add a description of your project"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["add", "keywords", "for", "pypa"]
classifiers = [
"Programming Language :: Python",
]

[tool.setuptools]
packages = ["rantevou", "rantevou.src"]

[project.optional-dependencies]

[project.urls]
Homepage = "https://..."
Documentation = "https://..."
Repository = "https://..."
"Bug Tracker" = "https://..."
Changelog = "https://..."

[project.scripts]
rantevou = "rantevou:__main__.main"

[project.gui-scripts]

[project.entry-points]
